# sports-arb

./: .env.example  .gitignore  CLAUDE.md  deploy.sh  pyproject.toml
docs/plans/: 2026-02-04-auto-executor-design.md  2026-02-04-auto-executor-implementation.md  2026-02-04-executor-dashboard-design.md  2026-02-04-executor-rollback-design.md  2026-02-04-fix-executor-token-matching.md  2026-02-04-performance-and-liquidity-plan.md
src/: CLAUDE.md  config.py  db.py  main.py  models.py  state.py
src/connectors/: CLAUDE.md  base.py  kalshi.py  polymarket.py
src/engine/: CLAUDE.md  arbitrage.py  liquidity.py  matcher.py  normalizer.py
src/executor/: __init__.py  executor.py  models.py  order_placer.py  position_manager.py  risk_manager.py  settings_manager.py  telegram_bot.py  trade_logger.py  ws_handler.py
src/web/: app.py  routes.py
src/web/templates/: analytics.html  base.html  dashboard.html  executor.html  simulator.html
src/web/templates/partials/: CLAUDE.md  alerts.html  events.html
tasks/: todo.md
tests/: CLAUDE.md  test_arbitrage.py  test_config.py  test_executor.py  test_executor_models.py  test_executor_tokens.py  test_kalshi_trading.py  test_main_executor_integration.py  test_matcher.py  test_normalizer.py  test_order_placer.py  test_polymarket_trading.py  test_position_manager.py  test_risk_manager.py  test_telegram_bot.py
